[package]
name = "reward-handler"
version = "0.0.0"
authors = [ "josh brolin" ]
edition = "2018"
publish = false

[lib]
path = "src/endpoints.rs"

[dependencies.nft-collection]
path = "../nft-collection"

[dependencies.elrond-wasm]
version = "0.33.0"

[dev-dependencies.esdt-contract-mock]
path = "../esdt-contract-mock"

[dev-dependencies.elrond-wasm-debug]
version = "0.33.0"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
