[package]
name = "reward-handler-wasm"
version = "0.0.0"
authors = [ "josh brolin" ]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.reward-handler]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.33.0"

[dependencies.elrond-wasm-output]
version = "0.33.0"
features = [ "wasm-output-mode",]
